--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@tailwindcss/postcss": "^4.1.17",
+    "@types/geojson": "^7946.0.16",
+    "@types/maplibre-gl": "^1.13.2",
     "daisyui": "^5.5.0",
+    "maplibre-gl": "^5.12.0",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.17",
